--- a/scss/partials/_responsive.scss
+++ b/scss/partials/_responsive.scss
@@ -14,13 +14,6 @@
     and (max-device-width: 767px){
 
       #logo {
-         // height: 46px;
-         // padding-right: 20px;
-         // position: fixed;
-         // top: 7px;
-         // left: 0.5rem;
-         // width: 127px;
-         // z-index: 1001;
          display: none;
       }
 
@@ -54,11 +47,32 @@
       font-weight: bolder;
       color: #131313;
       text-shadow: none;
-  }
+      }
+
+      .quote2 p {
+         position: absolute;
+         top: 206rem;
+         font-size: 1rem;
+         font-weight: bolder;
+         color: #131313;
+         text-shadow: none;
+         }
      
 
 
       .parallax {
+         height: 25vh;
+
+         p {
+            position: absolute;
+            transform: translate(-50%, 50%);
+            top: -15%;
+            left: 50%;
+            font-size: 19px;
+         }
+      }
+
+      .parallax2 {
          height: 25vh;
 
          p {
@@ -99,13 +113,24 @@
      }
 
      .first {
-      height: 300vh;
+      height: 250vh;
       }
 
       .second {
-         height: 300vh;
+         height: 250vh;
+         }
+
+         footer p {
+            color: white;
+            text-align: center;
+            position: absolute;
+            top: 39%;
+            left: 2.1rem;
+            font-size: 14px;
          }
       }
+
+
 
   /* Responsive Design */
     /*Tablets*/
