--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -236,6 +236,55 @@ div img {
     }
 }
 
+// Gallery
+
+.gallery-body {
+    padding: 0;
+    margin: 0;
+    // background: rgba(33, 84, 110, 0.6);
+    background-image: url(../images/enrique-cadena-l7K7GpalaZ4-unsplash.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.container {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /* width: 95%; */
+    margin: auto;
+    padding-top: 2rem;
+    width: 82VW;
+    grid-gap: 1rem;
+    box-shadow: 9px 13px 19px 0px black;
+}
+
+.item {
+    border: 2px solid rgb(215, 234, 235);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    box-shadow: 5px 5px 5px black;
+}
+
+/* .item1 {
+grid-column: span 1;
+} */
+
+.item img {
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    transition: 0.9s;
+    
+}
+
+.item img:hover {
+    opacity: 1;
+    // transform: rotateY(-180deg);
+    cursor: pointer;
+}
+
 
 
 
