--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@
   z-index: 1001; }
 
 .one {
-  background: red;
   width: 100%;
   height: 20rem;
   position: relative;
@@ -45,7 +44,6 @@
     cursor: pointer; }
 
 .two {
-  background: black;
   width: 100%;
   height: 20rem;
   position: relative;
@@ -65,7 +63,6 @@
     cursor: pointer; }
 
 .three {
-  background: blue;
   width: 100%;
   height: 20rem;
   position: relative;
@@ -194,7 +191,6 @@ div img {
 .gallery-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* width: 95%; */
   margin: auto;
   padding-top: 2rem;
   width: 82VW;
@@ -209,9 +205,6 @@ div img {
   object-fit: cover;
   box-shadow: 5px 5px 5px black; }
 
-/* .item1 {
-grid-column: span 1;
-} */
 .item img {
   width: 100%;
   height: 100%;
@@ -235,29 +228,74 @@ header {
   background-position: center;
   object-fit: cover; }
 
-nav {
-  width: 100%;
-  height: 4.5rem;
-  background-color: #000000;
+/* The sidebar menu */
+.sidebar {
+  height: 100%;
+  /* 100% Full-height */
+  width: 0;
+  /* 0 width - change this with JavaScript */
   position: fixed;
-  z-index: 1000; }
+  /* Stay in place */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  left: 0;
+  background-color: #111;
+  /* Black*/
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 60px;
+  /* Place content 60px from the top */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in the sidebar */ }
 
-ul {
-  padding-top: 1.7rem;
-  padding-left: 11.5rem; }
-
-li {
-  list-style: none;
-  display: inline; }
-
-a {
+/* The sidebar links */
+.sidebar a {
+  padding: 8px 8px 8px 32px;
   text-decoration: none;
-  color: #CCC9E7;
-  font-size: 20px;
-  padding: 0.8rem;
-  transition: all 0.5s;
-  font-family: 'Cinzel', serif; }
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s; }
 
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+  color: #f1f1f1; }
+
+/* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px; }
+
+/* The button used to open the sidebar */
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  position: fixed; }
+
+.openbtn:hover {
+  background-color: #444; }
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  /* If you want a transition effect */
+  padding: 20px; }
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {
+    padding-top: 15px; }
+
+  .sidebar a {
+    font-size: 18px; } }
 a:hover {
   background: white;
   color: #000000; }
