new navbar + busy with responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -260,7 +260,7 @@ header {
 
 /* When you mouse over the navigation links, change their color */
 .sidebar a:hover {
-  color: #f1f1f1; }
+  color: #000000; }
 
 /* Position and style the close button (top right corner) */
 .sidebar .closebtn {
