--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -30,6 +30,7 @@ header {
   /* The sidebar links */
   .sidebar a {
     padding: 8px 8px 8px 32px;
+    // padding: 8px 8px 8px 77px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
@@ -39,7 +40,7 @@ header {
   
   /* When you mouse over the navigation links, change their color */
   .sidebar a:hover {
-    color: #f1f1f1;
+    color: #000000;
   }
   
   /* Position and style the close button (top right corner) */
