--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -60,7 +60,7 @@ header {
     color: white;
     padding: 10px 15px;
     border: none;
-    position: fixed;
+    // position: fixed;
   }
   
   .openbtn:hover {
