--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -1,282 +1,271 @@
 // main header container
 .heading {
-    position: absolute;
-    padding-top: 5rem;
-    top: 10rem;
-    left: 50rem;
+  position: absolute;
+  padding-top: 5rem;
+  top: 10rem;
+  left: 50rem;
 }
 
 // first section
 .first {
-    width: 100%;
-    height: 100vh;
-    margin: auto;
-    background: #fff;
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  background: #fff;
 }
 
 // first section
 .second {
-    width: 100%;
-    height: 100vh;
-    margin: auto;
-    background: #fff;
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  background: #fff;
 }
 
 // Guitar logo
 #logo {
-    height: 60px;
-    padding-right: 20px;
-    position: fixed;
-    top: 7px;
-    width: 181px;
-    z-index: 1001;
+  height: 60px;
+  padding-right: 20px;
+  position: fixed;
+  top: 7px;
+  width: 181px;
+  z-index: 1001;
 }
 
 // George Benson
 .one {
+  width: 100%;
+  height: 20rem;
+  position: relative;
+  box-shadow: 8px 9px 8px black;
+  div {
+    overflow: hidden;
     width: 100%;
-    height: 20rem;
-    position: relative;
-    box-shadow: 8px 9px 8px black;
-    div {
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-    }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transform: scale(1);
-        transition: all 0.5s ease-in-out;
-    }
-    
-    img:hover {
-        transform: scale(1.1);
-        cursor: pointer;
-    }
+    height: 100%;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1);
+    transition: all 0.5s ease-in-out;
+  }
+
+  img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 }
 
 // All jarruea
 .two {
+  width: 100%;
+  height: 20rem;
+  position: relative;
+  box-shadow: 8px 9px 8px black;
+  div {
+    overflow: hidden;
+    height: 100%;
     width: 100%;
-    height: 20rem;
-    position: relative;
-    box-shadow: 8px 9px 8px black;
-    div {
-        overflow: hidden;
-        height: 100%;
-        width: 100%;
-    }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transform: scale(1);
-        transition: all 0.5s ease-in-out;
-    }
-    
-    img:hover {
-        transform: scale(1.1);
-        cursor: pointer;
-    }
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1);
+    transition: all 0.5s ease-in-out;
+  }
+
+  img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 }
 
-//Carlos Santana 
+//Carlos Santana
 .three {
+  width: 100%;
+  height: 20rem;
+  position: relative;
+  box-shadow: 8px 9px 8px black;
+  div {
+    overflow: hidden;
+    height: 100%;
     width: 100%;
-    height: 20rem;
-    position: relative;
-    box-shadow: 8px 9px 8px black;
-    div {
-        overflow: hidden;
-        height: 100%;
-        width: 100%;
-    }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transform: scale(1);
-        transition: all 0.5s ease-in-out;
-    }
-    
-    img:hover {
-        transform: scale(1.1);
-        cursor: pointer;
-    }
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1);
+    transition: all 0.5s ease-in-out;
+  }
+
+  img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 }
 
 // fist section heading
 .Best {
-    font-size: 40px;
-    text-align: center;
-    text-shadow: none;
-    margin-top: 1.5rem;
-    color: black;
-    font-family: 'Abril Fatface', cursive;
-    text-shadow: 5px 5px 5px white;
+  font-size: 40px;
+  text-align: center;
+  text-shadow: none;
+  margin-top: 1.5rem;
+  color: black;
+  font-family: "Abril Fatface", cursive;
+  text-shadow: 5px 5px 5px white;
 }
 
 // second section heading
 .head2 {
-    font-size: 2rem;
-    color: #CCC9E7;
-    text-align: center;
-    text-shadow: 2px 8px 0px black;
-    font-family: 'Kaushan Script', cursive;
+  font-size: 2rem;
+  color: #ccc9e7;
+  text-align: center;
+  text-shadow: 2px 8px 0px black;
+  font-family: "Kaushan Script", cursive;
 }
 
 div img {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 // Overlay
 .one .overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .9s ease;
-  }
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.9s ease;
+}
 
-//Overlay hovering 
-  .one:hover .overlay {
-    height: 100%;
-    background-color: rgba(19, 21, 22, 0.924);
-  }
+//Overlay hovering
+.one:hover .overlay {
+  height: 100%;
+  background-color: rgba(19, 21, 22, 0.924);
+}
 
-  
 .two .overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .9s ease;
-  }
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.9s ease;
+}
 
-  .two:hover .overlay {
-    height: 100%;
-    background-color: rgba(19, 21, 22, 0.952);
-  }
+.two:hover .overlay {
+  height: 100%;
+  background-color: rgba(19, 21, 22, 0.952);
+}
 
-  
 .three .overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .9s ease;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.9s ease;
+}
+
+.three:hover .overlay {
+  height: 100%;
+  background-color: rgba(19, 21, 22, 0.924);
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+  h4 {
+    font-size: 25px;
   }
 
-  .three:hover .overlay {
-    height: 100%;
-    background-color: rgba(19, 21, 22, 0.924);
+  p {
+    font-size: 17px;
+    font-family: "Times New Roman", Times, serif;
   }
-
-  .text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-        
-        h4 {
-            font-size: 25px;
-        } 
-
-        p {
-            font-size: 17px;
-            font-family: 'Times New Roman', Times, serif;
-        } 
-  }
+}
 
 // quotes
-  .quote {
-      position: relative;
-    p {
+.quote {
+  position: relative;
+  p {
     position: absolute;
     top: 3rem;
     font-size: 2rem;
     width: 88vw;
     color: rgb(19, 19, 19);
     text-shadow: 2px 0px 0px black;
-    // box-shadow: -4px 1px 21px black;
-    }
+  }
 }
 
 .quote2 {
-    position: relative;
-    p {
+  position: relative;
+  p {
     position: absolute;
     top: 3rem;
     font-size: 2rem;
     width: 88vw;
     color: rgb(8, 8, 8);
     text-shadow: 2px 0px 0px black;
-    // box-shadow: -4px 1px 21px black;
-    }
+  }
 }
 
 // Gallery
 
 .gallery-body {
-    padding: 0;
-    margin: 0;
-    background-image: url(../images/jazz_music_fire_silhouette_jazzman_28173_1280x720.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  padding: 0;
+  margin: 0;
+  background-image: url(../images/jazz_music_fire_silhouette_jazzman_28173_1280x720.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .gallery-container {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    margin: auto;
-    padding-top: 2rem;
-    width: 82VW;
-    grid-gap: 1rem;
-    box-shadow: 9px 13px 19px 0px black;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: auto;
+  padding-top: 2rem;
+  width: 82vw;
+  grid-gap: 1rem;
+  box-shadow: 9px 13px 19px 0px black;
 }
 
 .item {
-    border: 2px solid rgb(215, 234, 235);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: cover;
-    box-shadow: 5px 5px 5px black;
+  border: 2px solid rgb(215, 234, 235);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  box-shadow: 5px 5px 5px black;
 }
 
 .item img {
-    width: 100%;
-    height: 100%;
-    opacity: 0.8;
-    transition: 0.9s;
-    
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+  transition: 0.9s;
 }
 
 .item img:hover {
-    opacity: 1;
-    cursor: pointer;
+  opacity: 1;
+  cursor: pointer;
 }
-
-
-
-
-
-
